<resources>
    <string name="app_name">Timo RxJava</string>
    <string name="txt_launch_card_activity">Card</string>
    <string name="txt_launch_subscription_activity">Subscription</string>
    <string name="txt_launch_flickr_activity">Flickr</string>
    <string name="txt_launch_file_activity">File</string>
    <string name="txt_launch_coffee_activity">Coffee</string>
    <string name="txt_launch_chat_activity">Chat</string>
    <string name="txt_launch_tic_tac_activity">Tic Tac</string>

    <!-- card -->
    <string name="txt_type_something_hint">Type something ..</string>
    <string name="txt_type_result_error">Text too long</string>
    <string name="txt_card_number_hint">Type your card number</string>
    <string name="txt_card_cvc_hint">Type your card cvc</string>
    <string name="txt_card_is_valid_toast">Your card is valid, great job!</string>
    <string name="txt_card_number_check_toast">Check your card numbers, something went wrong!</string>
    <string name="txt_check_card_validity_toast">Check when your card expires!</string>
    <string name="txt_card_not_valid_toast">Your card is not valid, shame on you :)</string>
    <string name="txt_submit">Submit</string>

    <!-- subscription -->
    <string name="txt_first">First</string>
    <string name="txt_second">Second</string>
    <string name="txt_third">Third</string>
    <string name="txt_release">Release</string>
    <string name="txt_show_message">Show IT</string>
    <string name="txt_title_hint">Title</string>
    <string name="txt_title_content">Message</string>

    <!-- flickr -->
    <string name="txt_search_hint">Search by..</string>

    <!-- file -->
    <string name="txt_home">Home</string>
    <string name="txt_back">Back</string>

    <!-- tic tac -->
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="status">Status</string>
    <string name="player_turn_to_play">%s \' Turn - Tap to play</string>
    <string name="x_won">X has won</string>
    <string name="o_won">O has won</string>
    <string name="match_draw">Match draw</string>

    <!-- Chat message -->
    <string name="hint_your_message">Idea to share?</string>
    <string name="placeholder_text">Idea</string>
</resources>